# transformations-cli

./: .env_example  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile-azure-pipelines  README.md  action.yml  codecov.yml  githubaction.md  migrationguide.md  mypy.ini  package.json  pyproject.toml  pytest.ini
.github/: CODEOWNERS
.github/workflows/: deploy_transform.yml  release.yml  test_and_build.yml
asd/cdf-datapoints-upsert-tr-011d-sig_ocean_toneta/: transformation.sql  transformation.yml
asd/cdf-event-delete-tr-010a-sig_ocean_voyages/: transformation.sql  transformation.yml
asd/cdf-event-delete-tr-010b-sig_ocean_events/: transformation.sql  transformation.yml
asd/cdf-event-delete-tr-010c-sig_ocean_evdetails/: transformation.sql  transformation.yml
asd/cdf-event-upsert-tr-009a-sig_ocean_voyages/: transformation.sql  transformation.yml
asd/cdf-event-upsert-tr-009b-sig_ocean_events/: transformation.sql  transformation.yml
azure_pipelines_example/: azure-pipelines.yaml
azure_pipelines_example/transformations/: manifest.yaml
cognite/transformations_cli/: __init__.py  __main__.py  _clients.py  clients.py  defaults.py
cognite/transformations_cli/commands/: __init__.py  base.py  delete.py  jobs.py  list.py  query.py  run.py  show.py  utils.py
cognite/transformations_cli/commands/deploy/: deploy.py  enum_definitions.py  load_yaml.py  transformation_config.py  transformation_types.py  transformation_types_legacy.py  transformations_api.py  utils.py
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  quickstart.rst  transformation_apikey.yaml  transformation_oidc.yaml
example/: transformation1.yaml  transformation2.yaml
oidc_examples/: transformation1.yaml  transformations2.yaml
scripts/: check_version_match.py
tests/: conftest.py  helpers.py  test_client.py  test_clients.py  test_config.py  test_delete.py  test_deploy.py  test_jobs.py  test_list.py  test_query.py  test_run.py  test_show.py  test_utils.py
tests/example/: my_transform.sql  transformation2.yaml
tests/example/subfolder/: transformation1.yaml
tests/invalid_example/: invalid.yaml  transformation1.yaml
tests/oidc_examples/: transformation1.yaml  transformation3.yaml
tests/oidc_examples/subfolder/: my_transform.sql  transformations2.yaml
tests/oidc_examples/subfolder2/: transformation.sql  transformation10.yml
tests/subfolder2/: transformation10.yml
