[tool.poetry]
name = "transformations-cli"
version = "0.1.0"
description = "A CLI for the Transformations service in CDF"
authors = ["Mathias Lohne <mathias.lohne@cognite.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cognitedata/transformations-cli"

packages = [
    { include="cognite", from="." },
]

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.py$'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # this makes sort all Python files
known_third_party = []

[tool.poetry.dependencies]
python = "^3.7"
cognite-sdk-experimental = "^0.58.0"
cognite-extractor-utils = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.2"
flake8 = "^3.9.2"
mypy = "^0.910"
autoflake = "=1.3"
pre-commit = "^2.13.0"

[tool.poetry.scripts]
transformations = "cognite.transformations_cli.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
