[tool.poetry]
name = "cognite-transformations-cli"
version = "2.3.0"
description = "A CLI for the Transformations service in CDF"
authors = ["Mathias Lohne <mathias.lohne@cognite.com>", "Emel Varol <emel.varol@cognite.com>", "Einar Marstrander Omang <einar.omang@cognite.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cognitedata/transformations-cli"

packages = [
    { include="cognite", from="." },
]

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.py$'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # this makes sort all Python files
known_third_party = ["click", "dacite", "dotenv", "pytest", "regex", "sqlparse", "tabulate", "toml", "yaml"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.2"
types-retry = "^0.1.5"
tabulate = "^0.8.9"
types-tabulate = "^0.8.3"
sqlparse = "^0.4.2"
cognite-sdk = "^5.5"
regex = "^2021.11.10"
dacite = "^1.6.0"
python-dotenv = "^0.21.0"
pyparsing = "^3.0.9"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.2"
flake8 = "^3.9.2"
mypy = "^0.910"
autoflake = "=1.3"
pre-commit = "^2.13.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
twine = "^3.5.0"
types-PyYAML = "^6.0.12"
types-toml = "^0.10.8"

[tool.poetry.scripts]
transformations-cli = "cognite.transformations_cli.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
